--- a/HW1-uni.ipynb
+++ b/HW1-uni.ipynb
@@ -73,7 +73,7 @@
     "        np.random.seed(1)\n",
     "        \n",
     "        self.parameters = {}\n",
-    "        self.num_layers = 11\n",
+    "        self.num_layers = \n",
     "        self.drop_prob = \n",
     "        self.reg_lambda =\n",
     "        \n",
