--- a/HW1-uni.ipynb
+++ b/HW1-uni.ipynb
@@ -71,14 +71,14 @@
     "        :param reg_lambda: regularization parameter. Only required in part 2 of the assignment\n",
     "        \"\"\"\n",
     "        np.random.seed(1)\n",
-    "        \n",
+    "\n",
     "        self.parameters = {}\n",
-    "        self.num_layers = \n",
-    "        self.drop_prob = \n",
-    "        self.reg_lambda =\n",
-    "        \n",
+    "        self.num_layers = 3\n",
+    "        self.drop_prob = 0\n",
+    "        self.reg_lambda = 0\n",
+    "\n",
     "        # init parameters\n",
-    "        \n",
+    "\n",
     "\n",
     "    def affineForward(self, A, W, b):\n",
     "        \"\"\"\n",
@@ -87,7 +87,8 @@
     "        the number of samples\n",
     "        :returns: the affine product WA + b, along with the cache required for the backward pass\n",
     "        \"\"\"\n",
-    "        \n",
+    "        return W * A + b\n",
+    "\n",
     "\n",
     "    def activationForward(self, A, activation=\"relu\"):\n",
     "        \"\"\"\n",
@@ -95,12 +96,16 @@
     "        :param A: input to the activation function\n",
     "        :param prob: activation funciton to apply to A. Just \"relu\" for this assignment.\n",
     "        :returns: activation(A)\n",
-    "        \"\"\" \n",
+    "        \"\"\"\n",
+    "\n",
     "\n",
     "\n",
     "    def relu(self, X):\n",
+    "        if X <= 0:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return X\n",
     "\n",
-    "            \n",
     "    def dropout(self, A, prob):\n",
     "        \"\"\"\n",
     "        :param A: Activation\n",
@@ -126,7 +131,7 @@
     "        \"\"\"\n",
     "\n",
     "        return AL, cache\n",
-    "    \n",
+    "\n",
     "    def costFunction(self, AL, y):\n",
     "        \"\"\"\n",
     "        :param AL: Activation of last layer, shape (num_classes, S)\n",
@@ -135,11 +140,10 @@
     "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
     "        \"\"\"\n",
     "        # compute loss\n",
-    "        \n",
+    "\n",
     "        if self.reg_lambda > 0:\n",
-    "            # add regularization\n",
-    "       \n",
-    "        \n",
+    "        # add regularization\n",
+    "\n",
     "        # gradient of cost\n",
     "        dAL =\n",
     "        return cost, dAL\n",
@@ -162,7 +166,7 @@
     "        In this case, it's just relu. \n",
     "        \"\"\"\n",
     "\n",
-    "        \n",
+    "\n",
     "    def relu_derivative(self, dx, cached_x):\n",
     "\n",
     "        return dx\n",
@@ -180,17 +184,15 @@
     "        :returns gradients: dW and db for each weight/bias\n",
     "        \"\"\"\n",
     "        gradients = {}\n",
-    "        \n",
+    "\n",
     "        for ...:\n",
-    "            \n",
-    "            \n",
+    "\n",
     "            if self.drop_prob > 0:\n",
-    "                #call dropout_backward\n",
-    "           \n",
-    "            \n",
+    "        # call dropout_backward\n",
+    "\n",
     "        if self.reg_lambda > 0:\n",
-    "            # add gradients from L2 regularization to each dW\n",
-    "        \n",
+    "        # add gradients from L2 regularization to each dW\n",
+    "\n",
     "        return gradients\n",
     "\n",
     "\n",
@@ -209,10 +211,10 @@
     "        :param batch_size: number of samples in a minibatch\n",
     "        :param print_every: no. of iterations to print debug info after\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
-    "            \n",
+    "\n",
     "            # forward prop\n",
     "\n",
     "            # compute loss\n",
@@ -222,8 +224,8 @@
     "            # update weights and biases based on gradient\n",
     "\n",
     "            if i % print_every == 0:\n",
-    "                # print cost, train and validation set accuracies\n",
-    "                \n",
+    "        # print cost, train and validation set accuracies\n",
+    "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
     "        Make predictions for each sample\n",
@@ -240,7 +242,7 @@
     "        :returns: (tuple) X_batch, y_batch\n",
     "        \"\"\"\n",
     "\n",
-    "        return X_batch, y_batch"
+    "        return X_batch, y_batch\n"
    ]
   },
   {
